--- a/docs_user/modules/proc_performing-a-fast-forward-upgrade-on-compute-services.adoc
+++ b/docs_user/modules/proc_performing-a-fast-forward-upgrade-on-compute-services.adoc
@@ -8,13 +8,48 @@ You must upgrade the Compute services from {rhos_prev_long} {rhos_prev_ver} to {
 * Remove pre-fast-forward upgrade workarounds from the Compute control plane services and Compute data plane services.
 * Run Compute database online migrations to update live data.
 
-.Procedure
+. Prerequisites
 
-. Wait for cell1 Compute data plane services version to update:
+* Define the shell variables necessary to apply the fast-forward upgrade commands, for each Nova compute cell.
 +
 ----
-$ oc exec openstack-cell1-galera-0 -c galera -- mysql -rs -uroot -p$PODIFIED_DB_ROOT_PASSWORD \
-    -e "select a.version from nova_cell1.services a join nova_cell1.services b where a.version!=b.version and a.binary='nova-compute';"
+DEFAULT_CELL_NAME="cell3"
+RENAMED_CELLS="cell1 cell2 $DEFAULT_CELL_NAME"
+
+declare -A PODIFIED_DB_ROOT_PASSWORD
+for CELL in $(echo "super $RENAMED_CELLS"); do
+  PODIFIED_DB_ROOT_PASSWORD[$CELL]=$(oc get -o json secret/osp-secret | jq -r .data.DbRootPassword | base64 -d)
+done
+
+NODESETS=""
+for CELL in $(echo $RENAMED_CELLS); do
+  oc get Openstackdataplanenodeset openstack-${CELL} || continue
+  NODESETS="'openstack-${CELL}', $NODESETS" <1>
+done
+NODESETS="[${NODESETS%,*}]"
+
+NOVASERVICES=""
+for CELL in $(echo $RENAMED_CELLS); do
+  NOVASERVICES="'nova-${CELL}', $NOVASERVICES" <2>
+done
+NOVASERVICES="[${NOVASERVICES%,*}]"
+----
++
+<1> Each dataplane node set name must match the name of the node set that you defined in its corresponding `OpenStackDataPlaneNodeSet` CR.
+<2> Each dataplane services name must match the name of the service that you included in the `servicesOverride` key of its corresponding `OpenStackDataPlaneNodeSet` CR.
+
+[NOTE]
+Here, the cells databases share the password defined in `osp-secret`.
+
+.Procedure
+
+. Wait for {compute_service} data plane services version updated for all cells:
++
+----
+$ for CELL in $(echo $RENAMED_CELLS); do
+  oc exec openstack-$CELL-galera-0 -c galera -- mysql -rs -uroot -p"${PODIFIED_DB_ROOT_PASSWORD[$CELL]}" \
+    -e "select a.version from nova_${CELL}.services a join nova_${CELL}.services b where a.version!=b.version and a.binary='nova-compute';"
+done
 ----
 +
 [NOTE]
@@ -28,17 +63,10 @@ Review any errors in the nova Compute agent logs on the data plane, and the `nov
 +
 [source,yaml]
 ----
-$ oc patch openstackcontrolplane openstack -n openstack --type=merge --patch '
-spec:
-  nova:
-    template:
-      cellTemplates:
-        cell0:
-          conductorServiceTemplate:
-            customServiceConfig: |
-              [workarounds]
-              disable_compute_service_check_for_ffu=false
-        cell1:
+$ rm -f celltemplates
+$ for CELL in $(echo $RENAMED_CELLS); do
+  cat >> celltemplates << EOF
+        ${CELL}:
           metadataServiceTemplate:
             customServiceConfig: |
               [workarounds]
@@ -47,6 +75,13 @@ spec:
             customServiceConfig: |
               [workarounds]
               disable_compute_service_check_for_ffu=false
+EOF
+done
+
+$ cat > oscp-patch.yaml << EOF
+spec:
+  nova:
+    template:
       apiServiceTemplate:
         customServiceConfig: |
           [workarounds]
@@ -59,7 +94,39 @@ spec:
         customServiceConfig: |
           [workarounds]
           disable_compute_service_check_for_ffu=false
-'
+      cellTemplates:
+        cell0:
+          conductorServiceTemplate:
+            customServiceConfig: |
+              [workarounds]
+              disable_compute_service_check_for_ffu=false
+EOF
+$ cat celltemplates >> oscp-patch.yaml
+----
++
+
+* If you are adopting the {compute_service} with the {bare_metal_first_ref}, append the following `novaComputeTemplates` in the needed `cell<N>` section(s) of the {compute_service} CR patch:
++
+[source,yaml]
+----
+        cell<N>:
+          novaComputeTemplates:
+            <hostname>: <1>
+              customServiceConfig: |
+                [DEFAULT]
+                host = <hostname>
+                [workarounds]
+                disable_compute_service_check_for_ffu=true
+              computeDriver: ironic.IronicDriver
+        ...
+----
++
+<1> Replace `<hostname>` with the hostname of the node that is running the `ironic` Compute driver in the source cloud cell<N>.
+
+. Apply the patch file
++
+----
+$ oc patch openstackcontrolplane openstack -n openstack --type=merge --patch-file=oscp-patch.yaml
 ----
 
 . Wait until the Compute control plane services CRs are ready:
@@ -68,53 +135,49 @@ spec:
 $ oc wait --for condition=Ready --timeout=300s Nova/nova
 ----
 
+. Complete xref:adopting-compute-services-to-the-data-plane_data-plane[Adopting Compute services to the {rhos_acro} data plane]
+
 . Remove the pre-fast-forward upgrade workarounds from the Compute data plane services:
 +
 [source,yaml]
 ----
-$ oc apply -f - <<EOF
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: nova-extra-config
-  namespace: openstack
-data:
-  20-nova-compute-cell1-workarounds.conf: |
-    [workarounds]
-    disable_compute_service_check_for_ffu=false
+$ oc patch cm nova-cells-global-config --type=json -p='[{"op": "replace", "path": "/data/99-nova-compute-cells-workarounds.conf", "value": "[workarounds]\n"}]'
+$ for CELL in $(echo $RENAMED_CELLS); do
+  oc get Openstackdataplanenodeset openstack-${CELL} || continue
+  oc apply -f - <<EOF
 ---
 apiVersion: dataplane.openstack.org/v1beta1
 kind: OpenStackDataPlaneDeployment
 metadata:
-  name: openstack-nova-compute-ffu
+  name: openstack-nova-compute-ffu-$CELL
   namespace: openstack
 spec:
   nodeSets:
-    - openstack
+    - openstack-${CELL}
   servicesOverride:
-    - nova
+    - nova-${CELL}
+backoffLimit: 3
 EOF
+done
 ----
 +
-[NOTE]
-The service included in the `servicesOverride` key must match the name of the service that you included in the `OpenStackDataPlaneNodeSet` CR. For example, if you use a custom service called `nova-custom`, ensure that you add it to the `servicesOverride` key.
 
-. Wait for the Compute data plane services to be ready:
+. Wait for the Compute data plane services to be ready for all cells:
 +
 ----
-$ oc wait --for condition=Ready openstackdataplanedeployment/openstack-nova-compute-ffu --timeout=5m
+$ oc wait --for condition=Ready openstackdataplanedeployments --all --timeout=5m
 ----
 
-. Run Compute database online migrations to complete the fast-forward upgrade:
+. Run Compute database online migrations to complete the upgrade:
 +
 ----
 $ oc exec -it nova-cell0-conductor-0 -- nova-manage db online_data_migrations
-$ oc exec -it nova-cell1-conductor-0 -- nova-manage db online_data_migrations
+$ for CELL in $(echo $RENAMED_CELLS); do
+  oc exec -it nova-${CELL}-conductor-0 -- nova-manage db online_data_migrations
+done
 ----
 
-.Verification
-
-. Discover the Compute hosts in the cell:
+. Discover Compute hosts in the cells:
 +
 ----
 $ oc rsh nova-cell0-conductor-0 nova-manage cell_v2 discover_hosts --verbose
